--- a/index.html
+++ b/index.html
@@ -34,5 +34,22 @@
             
         </div>
     </header>
+    <div class="first-section">
+        <div class="wrapper">
+            <div class="first-section__box">
+                <ul class="first-section__list">
+                    <li class="first-section__item">
+                        <h1>Matvey<br>Chibrikov</h1>
+                    </li>
+                    <li class="first-section__item">
+                        <p>Nothing<br>19 y.o. mistake, Tomsk</p>
+                    </li>
+                    <li class="first-section__item">
+                        <h2>RU|ENG</h2>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
