--- a/index.html
+++ b/index.html
@@ -36,20 +36,22 @@
     </header>
     <div class="first-section">
         <div class="wrapper">
+
             <div class="first-section__box">
                 <ul class="first-section__list">
                     <li class="first-section__item">
                         <h1>Matvey<br>Chibrikov</h1>
                     </li>
-                    <li class="first-section__item">
+                    <li class="first-section__item centerelem">
                         <p>Nothing<br>19 y.o. mistake, Tomsk</p>
                     </li>
-                    <li class="first-section__item">
+                    <li class="first-section__item reverse">
                         <h2>RU|ENG</h2>
                     </li>
                 </ul>
             </div>
         </div>
+        
     </div>
 </body>
 </html>
