second section is ready!

--- a/index.html
+++ b/index.html
@@ -57,7 +57,36 @@
         </div>
     </div>
     <div class="second-section">
-        
+        <div class="wrapper">
+            <div class = "second-section__content">
+                <div class="second-section__article">
+                    <h3>
+                        About Me
+                    </h3>
+                </div>
+                <div class="second-section__text">
+                    <p>
+                        Idk what I need to write here, so...<br>
+                        AAAAA AAAAA AAAAA AAAAA
+                    </p>
+                    <br><br>
+                    <p> 
+                        She eat me up like it's Beni-bachi<br>
+                        Sorry 'bout that,  Sorry 'bout that,  Sorry 'bout that
+                    </p>
+                    <br><br>
+                    <p>
+                        My hobbies:<br>
+                        nothing...
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="third-section">
+        <div class="wrapper">
+            
+        </div>
     </div>
 </body>
 </html>
