--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
-    <header class="header">
+    <div class="links__item" id="home"></div>
+    <header class="header" >
         <div class="wrapper">
 
             <nav class="header__nav">
                 <ul class="header__list">
                     <li class="header__item">
-                        <a href="!#" class="header__link">Home</a>
+                        <a href="#home" class="header__link">Home</a>
                     </li>
                     <li class="header__item">
-                        <a href="!#" class="header__link">About me</a>
+                        <a href="#aboutme" class="header__link">About me</a>
                     </li>
                     <li class="header__item">
-                        <a href="!#" class="header__link">Skills</a>
+                        <a href="#skills" class="header__link">Skills</a>
                     </li>
                     <li class="header__item">
                         <a href="!#" class="header__link">Portfolio</a>
@@ -56,6 +57,7 @@
             </div>
         </div>
     </div>
+    <div class="links__item" id="aboutme"></div>
     <div class="second-section">
         <div class="wrapper">
             <div class = "second-section__content">
@@ -83,6 +85,7 @@
             </div>
         </div>
     </div>
+    <div class="links__item" id="skills"></div>
     <div class="third-section">
         <div class="wrapper">
             <div class="third-section__box">
