fourth section is ready

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <h3>Skills</h3>
                     </div>
                     <div class="third-section__text">
-                        <p>Idk what these programs are</p>
+                        <p>My skill in these programs:</p>
                     </div>
                 </div>
                 
@@ -206,7 +206,45 @@
         </div>
     </div>
     <div class="fourth-section">
-        
+        <div class="wrapper">
+            <div class="fourth-section__box">
+                <div class="fourth-section__article">
+                    <h3>Portfolio</h3>
+                </div>
+                <ul class="fourth-section__content">
+                    <li class="fourth-section__item">
+                        <div class="fourth-section__photo">
+                            <img src="./img/AchFirst.png" alt="">
+                        </div>
+                        <div class="fourth-section__photoarticle">
+                            <h5>
+                                Hat trick World Cup 2022
+                            </h5>
+                        </div>
+                    </li>
+                    <li class="fourth-section__item">
+                        <div class="fourth-section__photo">
+                            <img src="./img/AchSecond.png" alt="">
+                        </div>
+                        <div class="fourth-section__photoarticle">
+                            <h5>
+                                Vibe photo
+                            </h5>
+                        </div>
+                    </li>
+                    <li class="fourth-section__item">
+                        <div class="fourth-section__photo">
+                            <img src="./img/AchThird.png" alt="">
+                        </div>
+                        <div class="fourth-section__photoarticle">
+                            <h5>
+                                My dawg Milo
+                            </h5>
+                        </div>
+                    </li>
+                </li>
+            </div>
+        </div>
     </div>
 </body>
 </html>
