--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                         <a href="#skills" class="header__link">Skills</a>
                     </li>
                     <li class="header__item">
-                        <a href="!#" class="header__link">Portfolio</a>
+                        <a href="#portfolio" class="header__link">Portfolio</a>
                     </li>
                     <li class="header__item">
-                        <a href="!#" class="header__link">Contacts</a>
+                        <a href="#contacts" class="header__link">Contacts</a>
                     </li>
                 </ul>
             </nav>
@@ -205,6 +205,7 @@
             </div>
         </div>
     </div>
+    <div class="links__item" id="portfolio"></div>
     <div class="fourth-section">
         <div class="wrapper">
             <div class="fourth-section__box">
@@ -243,6 +244,53 @@
                         </div>
                     </li>
                 </li>
+            </div>
+        </div>
+    </div>
+    <div class="links__item" id="contacts"></div>
+    <div class="footer">
+        <div class="wrapper">
+            <div class="footer__box">
+                <div class="footer__article">
+                    <h3>Contacts</h3>
+                </div>
+                <div class="footer__text">
+                    <p>
+                        Ssfldldsfl slfdldfsdl dsf?<br>
+                        Fdfjjdsjs dsf dsad s!
+                    </p>
+                </div>
+                <div class="footer__button">
+                    <img src="./img/Button.png" alt="Button">
+                </div>
+                <ul class="footer__icons">
+                    <li class="footer__item">
+                        <a href="https://instagram.com/matvey_chib/">
+                            <img src="./img/FooterInst.png" alt="" >
+                        </a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="https://instagram.com/matvey_chib/">
+                            <img src="./img/FooterInst.png" alt="" >
+                        </a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="https://instagram.com/matvey_chib/">
+                            <img src="./img/FooterInst.png" alt="" >
+                        </a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="https://instagram.com/matvey_chib/">
+                            <img src="./img/FooterInst.png" alt="" >
+                        </a>
+                    </li>
+                </ul>
+                <div class="footer__lastword">
+                    <h6>
+                         that's all<br>
+                         that was cool
+                    </h6>
+                </div>
             </div>
         </div>
     </div>
